--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>كريم فون - الهواتف</title>
+<title>كريم فون - العروض</title>
 <style>
   body {
     font-family: 'Cairo', sans-serif;
     margin: 0; padding: 0;
-    background: #ffffff;
-    text-align: center;
-  }
-
-  /* === تصميم الوضع الداكن (Dark Mode) مفعل افتراضيًا === */
-  body {
     background-color: #ffffff;
     color: #000000;
-    font-family: 'Cairo', sans-serif;
-    margin: 0;
-    padding: 0;
+    text-align: center;
   }
 
   header {
@@ -114,7 +107,28 @@
     height: 50px;
   }
 
-  /* شبكة المنتجات */
+  .search-container {
+    margin: 10px auto 20px auto;
+    max-width: 400px;
+    padding: 0 10px;
+  }
+
+  #searchInput {
+    width: 100%;
+    padding: 12px 15px;
+    font-size: 16px;
+    border: 2px solid #ff8000;
+    border-radius: 25px;
+    outline: none;
+    transition: 0.3s;
+    text-align: right;
+    font-family: 'Cairo', sans-serif;
+  }
+
+  #searchInput:focus {
+    border-color: #000;
+  }
+
   .products-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -163,7 +177,6 @@
     background-color: #ff8000;
   }
 
-  /* نوتي فاي */
   #notification {
     display:none;
     position: fixed;
@@ -192,25 +205,21 @@
     100% {opacity: 0; transform: translateX(-50%) translateY(-20px);}
   }
 
-  /* ✅ إخفاء الشعار واسم كريم فون على الموبايل فقط */
   @media (max-width: 768px) {
     #logo,
     .center-title {
       display: none;
     }
   }
-
 </style>
 </head>
 <body>
 
 <header>
   <img id="logo" src="https://www2.0zz0.com/2025/08/02/13/788516909.jpg" alt="شعار كريم فون" />
-  
   <div class="center-title">
     <h1 class="company-name">كريم فون</h1>
   </div>
-
   <div class="header-controls">
     <div class="dropdown">
       <button onclick="toggleDropdown()" class="dropbtn">📂 الأقسام</button>
@@ -225,6 +234,10 @@
 </header>
 
 <div class="header-spacer"></div>
+
+<div class="search-container">
+  <input type="text" id="searchInput" oninput="searchProducts()" placeholder="🔍 ابحث عن اسم أو سعر العرض..." />
+</div>
 
 <h2>💥 العروض</h2>
 
@@ -263,6 +276,10 @@
   function renderProducts(products, containerId){
     const container = document.getElementById(containerId);
     container.innerHTML = "";
+    if(products.length === 0){
+      container.innerHTML = "<p>❌ لا توجد نتائج مطابقة.</p>";
+      return;
+    }
     products.forEach(p => {
       const div = document.createElement('div');
       div.className = 'product';
@@ -275,6 +292,15 @@
       `;
       container.appendChild(div);
     });
+  }
+
+  function searchProducts() {
+    const query = document.getElementById("searchInput").value.toLowerCase();
+    const filtered = products.filter(p =>
+      p.name.toLowerCase().includes(query) ||
+      p.price.toString().includes(query)
+    );
+    renderProducts(filtered, "productsContainer");
   }
 
   renderProducts(products, "productsContainer");
@@ -295,6 +321,83 @@
     }
   }
 </script>
+
+
+<footer class="footer">
+  <div class="footer-content">
+    <p>📞 <a href="tel:07801234567">07801234567</a> | 📍 
+      <a href="https://www.google.com/maps/place/Baghdad,+Iraq/" target="_blank" class="location-text">
+        الموقع: بغداد - شارع فلسطين
+      </a>
+    </p>
+    <div class="social-icons">
+      <a href="https://wa.me/9647801234567" target="_blank" title="واتساب">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
+      </a>
+      <a href="https://www.facebook.com/" target="_blank" title="فيسبوك">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" title="إنستغرام">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+      </a>
+    </div>
+  </div>
+</footer>
+
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">
+
+<style>
+.footer {
+  background-color: #ff8000;
+  color: white;
+  text-align: center;
+  padding: 10px 5px;
+  font-family: 'Cairo', sans-serif;
+  margin-top: 30px;
+  border-top: 3px solid #000;
+}
+.footer-content p {
+  margin: 5px 0;
+  font-size: 15px;
+}
+.footer-content a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+}
+.footer-content a:hover {
+  color: #000;
+}
+.social-icons {
+  margin-top: 5px;
+}
+.social-icons a {
+  margin: 0 5px;
+  display: inline-block;
+}
+.social-icons img {
+  width: 26px;
+  height: 26px;
+  transition: transform 0.2s ease;
+}
+.social-icons img:hover {
+  transform: scale(1.15);
+}
+.location-text {
+  font-family: 'Tajawal', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+@media (max-width: 768px) {
+  .footer-content p {
+    font-size: 13px;
+  }
+  .social-icons img {
+    width: 22px;
+    height: 22px;
+  }
+}
+</style>
 
 </body>
 </html>
