--- a/index.html
+++ b/index.html
@@ -325,19 +325,19 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <p>📞 <a href="tel:07801234567">07801234567</a> | 📍 
-      <a href="https://www.google.com/maps/place/Baghdad,+Iraq/" target="_blank" class="location-text">
-        الموقع: بغداد - شارع فلسطين
+        <p>📞 <a href="tel:07852728436">07852728436</a> | 📍 
+      <a href="https://www.google.com/maps/place/%D9%83%D8%B1%D9%8A%D9%85+%D9%81%D9%88%D9%86%E2%80%AD/@32.5665001,44.0282989,20z/data=!4m6!3m5!1s0x15596bd545481f71:0x9bd78031de899705!8m2!3d32.5664472!4d44.0284138!16s%2Fg%2F11l5f7p2jy?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="location-text">
+      الموقع: كربلاء - حي الوفاء 
       </a>
     </p>
     <div class="social-icons">
-      <a href="https://wa.me/9647801234567" target="_blank" title="واتساب">
+      <a href="https://wa.me/9647852728436" target="_blank" title="واتساب">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
       </a>
-      <a href="https://www.facebook.com/" target="_blank" title="فيسبوك">
+      <a href="https://www.facebook.com/kareemphonekr" target="_blank" title="فيسبوك">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
       </a>
-      <a href="https://www.instagram.com/" target="_blank" title="إنستغرام">
+      <a href="https://www.instagram.com/kareem_phone1" target="_blank" title="إنستغرام">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
       </a>
     </div>
