--- a/phones.html
+++ b/phones.html
@@ -369,5 +369,82 @@ function renderProducts(products, containerId){
   }
 </script>
 
+
+<footer class="footer">
+  <div class="footer-content">
+        <p>📞 <a href="tel:07852728436">07852728436</a> | 📍 
+      <a href="https://www.google.com/maps/place/%D9%83%D8%B1%D9%8A%D9%85+%D9%81%D9%88%D9%86%E2%80%AD/@32.5665001,44.0282989,20z/data=!4m6!3m5!1s0x15596bd545481f71:0x9bd78031de899705!8m2!3d32.5664472!4d44.0284138!16s%2Fg%2F11l5f7p2jy?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="location-text">
+      الموقع: كربلاء - حي الوفاء 
+      </a>
+    </p>
+    <div class="social-icons">
+      <a href="https://wa.me/9647852728436" target="_blank" title="واتساب">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
+      </a>
+      <a href="https://www.facebook.com/kareemphonekr" target="_blank" title="فيسبوك">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+      </a>
+      <a href="https://www.instagram.com/kareem_phone1" target="_blank" title="إنستغرام">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+      </a>
+    </div>
+  </div>
+</footer>
+
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">
+
+<style>
+.footer {
+  background-color: #ff8000;
+  color: white;
+  text-align: center;
+  padding: 10px 5px;
+  font-family: 'Cairo', sans-serif;
+  margin-top: 30px;
+  border-top: 3px solid #000;
+}
+.footer-content p {
+  margin: 5px 0;
+  font-size: 15px;
+}
+.footer-content a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+}
+.footer-content a:hover {
+  color: #000;
+}
+.social-icons {
+  margin-top: 5px;
+}
+.social-icons a {
+  margin: 0 5px;
+  display: inline-block;
+}
+.social-icons img {
+  width: 26px;
+  height: 26px;
+  transition: transform 0.2s ease;
+}
+.social-icons img:hover {
+  transform: scale(1.15);
+}
+.location-text {
+  font-family: 'Tajawal', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+@media (max-width: 768px) {
+  .footer-content p {
+    font-size: 13px;
+  }
+  .social-icons img {
+    width: 22px;
+    height: 22px;
+  }
+}
+</style>
+
 </body>
 </html>
