--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <a href="accessories.html">🎧 الإكسسوارات</a>
       </div>
     </div>
-    <button class="header-btn" onclick="window.location.href='login.html'">🔒 تسجيل دخول</button>
+    <button class="header-btn" onclick="window.location.href='login.php'">🔒 تسجيل دخول</button>
     <button class="header-btn" onclick="window.location.href='cart.html'">🛒 السلة</button>
   </div>
 </header>
