--- a/accessories.html
+++ b/accessories.html
@@ -212,7 +212,7 @@ header {
       
     </div>
   </div>
-  <button class="header-btn" onclick="window.location.href='login.php'">🔒 تسجيل دخول</button>
+  <button class="header-btn" onclick="window.location.href='login.html'">🔒 تسجيل دخول</button>
   <button class="header-btn" onclick="window.location.href='cart.html'">🛒 السلة</button>
 </header>
 
