--- a/accessories.html
+++ b/accessories.html
@@ -262,7 +262,7 @@ function searchProducts() {
 
 <script>
   const products = [
-    {id:101, name:"سماعة R50iNC", price:35000, image:"https://www2.0zz0.com/2025/08/07/11/407536128.jpg", specsPage:"specs-bluetooth.html"},
+    {id:101, name:"سماعة R50iNC", price:35000, image:"https://www2.0zz0.com/2025/08/07/11/407536128.jpg", specsPage:"سماعة_R50iNC.html"},
     {id:102, name:"ايس فاست W1", price:25000, image:"https://www2.0zz0.com/2025/08/07/12/521327915.jpg", specsPage:"specs-cable.html"},
     {id:103, name:"ايس فاست الطوك n4", price:25000, image:"https://www2.0zz0.com/2025/08/07/13/805488723.png", specsPage:"specs-case.html"}
   ];
